--- a/Mediminder/SupportFiles/Base.lproj/Main.storyboard
+++ b/Mediminder/SupportFiles/Base.lproj/Main.storyboard
@@ -253,7 +253,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2qm-P7-poF" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="LXI-fn-7aq">
-                        <rect key="frame" x="0.0" y="20" width="414" height="96"/>
+                        <rect key="frame" x="0.0" y="19.999999999999993" width="414" height="121.33333333333331"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.36915590149999999" green="0.18308861900000001" blue="0.69950210489999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="largeTitleTextAttributes">
